Bug #46563 Unable to start backup after online upgrade from 6.3 to 7.0
Submitted: 5 Aug 12:53 Modified: 6 Aug 11:02
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:mysql-5.1-telco-7.0 OS:Any
Assigned to: Jonas Oreland Target Version:

[5 Aug 12:53] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[5 Aug 12:59] Jonas Oreland
Error will be:

Starting backup...Error: 3001
Error msg: Could not start backup
Error desc: Sequence failure: Permanent error: Internal error
[5 Aug 13:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/80135

2960 Jonas Oreland	2009-08-05
      ndb - bug#46563
        Add code to detect table-id of SYSTAB_0 as it's impossible to know (hard-coded)
          e.g after upgrade
      
        The incorrect table-id cause Sequences not to work in DbUtil
        Which causes BACKUP (and replication) not to work
[5 Aug 14:03] Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090805110534-ovymemsb130twcrr)
(version source revid:jonas@mysql.com-20090805110534-ovymemsb130twcrr) (merge vers:
5.1.35-ndb-7.0.7) (pib:11)
[6 Aug 11:02] Jon Stephens
Documented bugfix in the NDB-7.0.7 changelog. See Bug #46494.