ndb - bug#46563   Add code to detect table-id of SYSTAB_0 as it's impossible to know (hard-coded)     e.g after upgrade

The incorrect table-id cause Sequences not to work in DbUtil
  Which causes BACKUP (and replication) not to work